@@ -2,7 +2,6 @@ v1.2.4
 	allow overwriting existing streams
 	fix encoding issue
 	the beatles -> beatles, the
-	remove space from remote images window
 
 v1.3
 	genre mode (genre -> artist -> album)
