@@ -6,6 +6,7 @@ v1.2.4 - Pending
 	+ Bug: Fix nl.po translation causing crash
 	+ Bug: Remember playlist position when adding from library
 	+ Bug: MPD_HOST with password doesn't work on first install
+	+ Bug: Fix desktop file to match current XDG standard (nigel)
 
 v1.2.3 - August 23, 2007
 	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
